force-app/main/default/objects/Waitlist__c/fields/Sum_of_Max_Rent__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Max_Rent__c</fullName>
    <label>Sum of Max Rent</label>
    <summarizedField>Waitlist_Rules__c.AMI_Monthly_Rent__c</summarizedField>
    <summaryForeignKey>Waitlist_Rules__c.Waitlist__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>