force-app/main/default/objects/Waitlist__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Represents the Overall Summary for details on the lottery or waitlist.  Amenities, Income Restrictions,  Priority admissions</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Represents the Overall Summary for details on the lottery or waitlist.  Amenities, Income Restrictions,  Priority admissions</inlineHelpText>
    <label>Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>