force-app/main/default/objects/Waitlist__c/fields/Total_2BR_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_2BR_Units__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total 2BR Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>