force-app/main/default/objects/Waitlist__c/fields/Total_Num_Mobility_Impairment_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Num_Mobility_Impairment_Units__c</fullName>
    <label>Total Num Mobility Impairment Units</label>
    <summarizedField>Waitlist_Building__c.Total_Mobility_Impairment_Units__c</summarizedField>
    <summaryForeignKey>Waitlist_Building__c.Waitlist__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>