force-app/main/default/objects/Waitlist__c/fields/Total_SRO_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_SRO_Units__c</fullName>
    <label>Total SRO Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>