force-app/main/default/objects/Waitlist__c/fields/Transit_Details__c.field-meta.xml
<CustomField>
    <fullName>Transit_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transit Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>