force-app/main/default/objects/Waitlist__c/fields/Trigger_Approval__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Approval</label>
    <type>Checkbox</type>
</CustomField>