force-app/main/default/objects/Waitlist__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>