force-app/main/default/objects/Waitlist__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>HCR Lottery or Waitlist Type for consideration</description>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>1BR</fullName>
                <default>true</default>
                <label>1BR</label>
            </value>
            <value>
                <fullName>2BR</fullName>
            </value>
            <value>
                <fullName>3BR</fullName>
            </value>
            <value>
                <fullName>4BR</fullName>
            </value>
            <value>
                <fullName>5BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>