force-app/main/default/objects/Waitlist__c/fields/Unoccupied_Units__c.field-meta.xml
<CustomField>
    <fullName>Unoccupied_Units__c</fullName>
    <formula>Project__r.Unoccupied_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unoccupied Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>