force-app/main/default/objects/Waitlist__c/fields/Unspecified_Units__c.field-meta.xml
<CustomField>
    <fullName>Unspecified_Units__c</fullName>
    <formula>Total_Num_Units__c - ( Total_Num_1BR_Units__c + Total_Num_2BR_Units__c + Total_Num_3BR_Units__c + Total_Num_4BR_Units__c + Total_Num_5BR_Units__c + Total_Num_Studio_Units__c )</formula>
    <label>Unspecified Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>