force-app/main/default/objects/Waitlist__c/fields/Waitlist_Building_Count__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Building_Count__c</fullName>
    <label>Waitlist Building Count</label>
    <summaryForeignKey>Waitlist_Building__c.Waitlist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>