force-app/main/default/objects/Waitlist__c/fields/Waitlist_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist End Date</label>
    <type>Date</type>
</CustomField>