force-app/main/default/objects/Waitlist__c/fields/Waitlist_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Image_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>