force-app/main/default/objects/Waitlist__c/fields/Waitlist_Label_for_Lookup_on_Move_Action__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Label_for_Lookup_on_Move_Action__c</fullName>
    <formula>Name &amp; &quot; | &quot; &amp;  Project__r.Name &amp; &quot; | &quot; &amp;  TEXT(Unit_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist Label for Lookup on Move Action</label>
    <type>Text</type>
</CustomField>