force-app/main/default/objects/Waitlist__c/fields/Waitlist_Lottery_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Lottery_Based_On__c</fullName>
    <label>Waitlist/Lottery Based On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>