force-app/main/default/objects/Waitlist__c/fields/Waitlist_Name__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Name__c</fullName>
    <formula>If(FIND( &apos;/hcrdev&apos;, $Api.Partner_Server_URL_570) &lt;= 0 ,HYPERLINK(LEFT($Api.Partner_Server_URL_570, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_570))&amp;Id , Name ,&quot;_self&quot;), HYPERLINK(LEFT($Api.Partner_Server_URL_570, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_570))+&quot;s/detail/&quot;&amp;Id , Name ,&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist Name</label>
    <type>Text</type>
</CustomField>