force-app/main/default/objects/Waitlist__c/fields/Waitlist_Preference__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Preference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>