force-app/main/default/objects/Waitlist__c/fields/Waitlist_Run_Location__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Run_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist Run Location</label>
    <type>TextArea</type>
</CustomField>