force-app/main/default/objects/Waitlist__c/fields/Waitlist_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Run_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist Run Time</label>
    <type>DateTime</type>
</CustomField>