force-app/main/default/objects/Waitlist__c/fields/Waitlist_URL__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_570, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_570)) &amp; &apos;s/waitlist/&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist URL</label>
    <type>Text</type>
</CustomField>