force-app/main/default/objects/Waitlist__c/fields/Wheelchair_Accesible__c.field-meta.xml
<CustomField>
    <fullName>Wheelchair_Accesible__c</fullName>
    <label>Priority Admissions Wheelchair Accesible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>