force-app/main/default/objects/Waitlist__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Zip Code for Housing Search (automation from Flow0</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>