force-app/main/default/objects/Waitlist__c/recordTypes/HCR_Lottery.recordType-meta.xml
<RecordType>
    <fullName>HCR_Lottery</fullName>
    <active>true</active>
    <description>Housing Lottery Applicant List</description>
    <label>HCR Lottery</label>
</RecordType>