force-app/main/default/objects/Waitlist__c/recordTypes/HCR_Succession.recordType-meta.xml
<RecordType>
    <fullName>HCR_Succession</fullName>
    <active>true</active>
    <label>HCR Succession</label>
</RecordType>