force-app/main/default/objects/Waitlist__c/recordTypes/HCR_Waitlist.recordType-meta.xml
<RecordType>
    <fullName>HCR_Waitlist</fullName>
    <active>true</active>
    <description>Housing Applicant Waitlist</description>
    <label>HCR Waitlist</label>
</RecordType>