force-app/main/default/objects/Waitlist__c/listViews/All_HCR_Lotteries.listView-meta.xml
<ListView>
    <fullName>All_HCR_Lotteries</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Is_Mitchell_Lama__c</columns>
    <columns>Project__c</columns>
    <columns>Building__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Waitlist__c.HCR_Lottery</value>
    </filters>
    <label>All HCR Lotteries</label>
</ListView>