force-app/main/default/objects/Waitlist__c/listViews/All_HCR_Waitlists.listView-meta.xml
<ListView>
    <fullName>All_HCR_Waitlists</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Requested_General_Waitlist_Open_Date__c</columns>
    <columns>Requested_General_Waitlist_Close_Date__c</columns>
    <columns>Requested_Accessibility_Unit_Open_Date__c</columns>
    <columns>Requested_Accessibility_Unit_Close_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Waitlist__c.HCR_Waitlist</value>
    </filters>
    <label>All HCR Waitlists</label>
</ListView>