force-app/main/default/objects/Waitlist__c/listViews/All_Waitlists.listView-meta.xml
<ListView>
    <fullName>All_Waitlists</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Asset_Manager__c</columns>
    <columns>County__c</columns>
    <columns>Project__c</columns>
    <columns>Project_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Mitchell_Lama__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Listings</label>
</ListView>