force-app/main/default/objects/Waitlist__c/listViews/ML_Lotteries.listView-meta.xml
<ListView>
    <fullName>ML_Lotteries</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Project__c</columns>
    <columns>Asset_Manager__c</columns>
    <columns>Is_Mitchell_Lama__c</columns>
    <columns>Location__c</columns>
    <columns>Number_of_Units__c</columns>
    <columns>Start_Date_Due__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Mitchell_Lama__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Waitlist__c.HCR_Lottery</value>
    </filters>
    <label>ML Lotteries</label>
</ListView>