force-app/main/default/objects/Waitlist__c/listViews/Preference_WAIVER_Requested.listView-meta.xml
<ListView>
    <fullName>Preference_WAIVER_Requested</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Preference_WAIVER_Requested__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Preference WAIVER Requested</label>
</ListView>