force-app/main/default/objects/Waitlist__c/listViews/Waitlists_4_9.listView-meta.xml
<ListView>
    <fullName>Waitlists_4_9</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Project__c</columns>
    <columns>Asset_Manager__c</columns>
    <columns>Is_Mitchell_Lama__c</columns>
    <columns>Location__c</columns>
    <columns>Number_of_Units__c</columns>
    <columns>Start_Date_Due__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Waitlist__c.HCR_Waitlist</value>
    </filters>
    <filters>
        <field>Is_Mitchell_Lama__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>4%9% Waitlists</label>
</ListView>